[gd_scene load_steps=10 format=3 uid="uid://6vh4qehvw0vd"]

[ext_resource type="Script" uid="uid://bx4e26r72jbo3" path="res://scripts/UI Manager/Main Menu/main_menu.gd" id="1_1ehe0"]
[ext_resource type="Texture2D" uid="uid://blslgnwrejisr" path="res://assets/vines.png" id="2_vqrtc"]
[ext_resource type="FontFile" uid="uid://bram4slrgawm5" path="res://assets/fonts/Beanstalk.ttf" id="3_3fxbk"]
[ext_resource type="Texture2D" uid="uid://p53d16f5aawc" path="res://assets/under the soil art jam logo transparent.png" id="3_h8gbn"]
[ext_resource type="Script" uid="uid://dr7kmldvsdtej" path="res://scripts/UI Manager/Main Menu/sprite_2d.gd" id="3_vwd81"]
[ext_resource type="PackedScene" uid="uid://wiy7cfldrylr" path="res://scenes/scene_transition_rect.tscn" id="5_utw6h"]

[sub_resource type="Animation" id="Animation_2wkub"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.2, 0.2)]
}

[sub_resource type="Animation" id="Animation_utw6h"]
resource_name = "shrinkAndGrow"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.25, 0.25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_csfe7"]
_data = {
&"RESET": SubResource("Animation_2wkub"),
&"shrinkAndGrow": SubResource("Animation_utw6h")
}

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_1ehe0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control"]
texture_filter = 1
texture_repeat = 2
position = Vector2(320, 180)
texture = ExtResource("2_vqrtc")
region_enabled = true
region_rect = Rect2(0, 0, 4000, 4000)
script = ExtResource("3_vwd81")

[node name="SceneTransitionRect" parent="CanvasLayer" instance=ExtResource("5_utw6h")]
process_priority = 2
visible = false
z_index = 10
script = null

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = 5.0
offset_right = 261.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Start Game" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../exit")
focus_neighbor_bottom = NodePath("../exit")
theme_override_fonts/font = ExtResource("3_3fxbk")
theme_override_font_sizes/font_size = 48
text = "Start"

[node name="exit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Start Game")
focus_neighbor_bottom = NodePath("../Start Game")
theme_override_fonts/font = ExtResource("3_3fxbk")
theme_override_font_sizes/font_size = 48
text = "Exit"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/VBoxContainer"]
texture_filter = 1
position = Vector2(-191, -3)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_h8gbn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/VBoxContainer/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_csfe7")
}
autoplay = "shrinkAndGrow"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
